# guitar_tab_generator

./: CMakeLists.txt
src/: BendDetector.h  Main.cpp  MainComponent.cpp  MainComponent.h  OnsetDetector.h  PitchDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TabTranscriber.h  Waveshapers.h
